<resources>
    <string name="app_name">Goint</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="offer_image_description">offer_image</string>
    <string name="prompt_email">Correo electronico</string>
    <string name="prompt_password">Contrasena</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_text_2">Aun sin cuenta? suscribete!</string>
    <string name="sign_up_button">Registrate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello One fragment</string>

    <string name="drawer_item_home">Home</string>
    <string name="drawer_item_settings">Ajustes</string>
    <string name="image_view_description">Imagen</string>

    <string name="google_android_map_api_key">AIzaSyC4EopvPigwIyMef27caRdlFaLE8RmBJk8</string>
    <string name="login_text_1">o ingresa con una red social</string>
    <string name="detail_activity_go_button">VAMOS</string>
    <string name="correo">Correo</string>
    <string name="nombre">Nombre</string>
    <string name="contrasena">Contrasena</string>
    <string name="repetir_contrasena">Repetir Contrasena</string>
    <string name="edad">Edad</string>
    <string name="signup">REGISTRAR</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="lorem_ipsum">lorem ipsum Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando</string>
    <string name="titulo_oferta_sample">Combo doble + papas !!! - 30% off - BK Miraflores</string>
    <string name="detalles_title">Detalles</string>
    <string name="view_more_promos_title">Otras promos de %s</string>
    <string name="request_permission_again">Goint requiere que aceptes los permisos para un correcto funcionamiento</string>
    <string name="search_near_posts_by_location_range">search_near_posts_by_location_range</string>
    <string name="search_text_actionbar">Search</string>
    <string name="search_hint">Search</string>

    <string name="facebook_app_id">145073776168729</string>
    <string name="fb_login_protocol_scheme">fb145073776168729</string>

    <string name="terms_and_conditions">
        Estas condiciones aplican a todos los beneficios y/o promociones\n
Goint, a menos que en la publicación se especifique lo contrario.\n
- No válido para mayoristas.\n
- No acumulable con otras promociones.\n
- Prohibida la venta de bebidas alcohólicas a menores de 18
años. Consumir bebidas alcohólicas en exceso es dañino para la
salud.\n
- Se requiere mostrar la promoción Goint en el dispositivo celular
del titular.\n
- Luego de la fecha de expiración de la promoción y/o beneficio
no es posible realizar gestiones de cambio y devolución.\n
- Menores de edad deben asistir acompañados por un adulto.\n
- Goint es un intermediario comercial, en ese sentido el
prestador directo del servicio es el responsable de brindar un
servicio idóneo a cada consumidor.\n
- Puedes usar todos los Goint que quieras en distintas fechas.
    </string>
    <string name="terms_and_conditions_label">TÉRMINOS Y CONDICIONES</string>
    <string name="facebook_user_id">facebook_id</string>
    <string name="terms_and_conditions_title_by_company">Términos y Condiciones de la empresa</string>
    <string name="user_id">user_id</string>
    <string name="fullname">fullname</string>
    <string name="password">password</string>
    <string name="email_user">email</string>
    <string name="user_info">USER_INFO</string>
    <string name="goint_phrase">Más que un beneficio</string>
    <string name="following_indication">Al suscribirse en las marcas deseadas. Te notificaremos cuando aparezcan nuevas promociones de estas.</string>
    <string name="share_text">Prueba Goint y descubre promociones cerca de ti</string>
</resources>
